# military-therapy-service

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  homepage  homepage.jsx  login.css  login.html  mypy.ini  pyproject.toml  question1.html  signup.css  signup.html  soldier_profile.html  styles.css  test_react.jsx  therapist_profile.html
api/: README.md  config.py  errors.py  logger.py  main.py  openapi.json  router.py
api/assessment/: controller.py  dto.py  entry_test.json  errors.py  evaluation.py  models.py  recommendation.py  repository.py  utils.py
api/auth/: dto.py  guards.py
api/base/: db.py  errors.py  model.py  repository.py
api/chats/: controller.py  dto.py  models.py  repository.py  service.py
api/profiles/: common.py  const.py  controller.py  dto.py  models.py  repository.py  service.py
api/pusher/: client.py
api/user/: controller.py  dto.py  errors.py  models.py  repositories.py  services.py
api/user/repositories/: user_repository.py
api/user/services/: user_service.py
api/utils/: utils.py
chat-app/: package-lock.json
chat-app/src/: App.js  server.js
chat-app/src/components/: Chat.css  Chat.js  ChatBox.css  ChatBox.js  ChatList.js
client/: Dockerfile  package-lock.json  package.json
client/src/: App.css  App.js  auth.js  styles.css
client/src/api/: apiClient.ts  authAtom.ts
client/src/components/: ChatBox.css  ChatBox.js  ChatList.css  ChatList.js
client/src/pages/: AccountPage.js  AccountPage.jsx  ChatPage.jsx  CodePage.jsx  EmailPage.jsx  ProfilePage.jsx  Test.jsx  Therapists.jsx  homepage.css  homepage.jsx
client/src/services/: api.js  auth.js
client/src/styles/: account.css  code.css  email.css  homepage.css  soldier.css  therapists.css
client/therapists_page/: globals.css  style.css  therapists.html
login/src/: App.js  auth.js  styles.css
login/src/pages/: AccountPage.js  CodePage.js  EmailPage.js
migrations/: env.py
migrations/versions/: 79af1de7e242_chats.py  a738c4f98b9a_initial.py  a7b0c0ecc9b4_initial.py
scripts/: init_local_app.py  openapi.py
