[project]
name = "api"
version = "0.1.0"
description = "The Therapy Service backend"
authors = [
    {name = "Vladyslav Bobryk",email = "bobryk.pn@ucu.edu.ua"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "~3.12"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[tool.poetry]
package-mode = false

[tool.poetry.scripts]
api = "api.main:start_local"
