[project]
name = "api"
version = "0.1.0"
description = "The Therapy Service backend"
authors = [
    {name = "Vladyslav Bobryk",email = "bobryk.pn@ucu.edu.ua"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "~3.12"

[tool.poetry.dependencies]
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
pydantic-settings = "^2.8.1"
jwt = "^1.3.1"
auth0-python = "^4.9.0"
sqlmodel = "^0.0.24"
sqlalchemy = "^2.0.40"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pre-commit = "^4.2.0"

[tool.poetry.scripts]
api = "api.main:start_local"
