[project]
name = "api"
version = "0.1.0"
description = "The Therapy Service backend"
authors = [
    {name = "Vladyslav Bobryk",email = "bobryk.pn@ucu.edu.ua"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "~3.12"

[tool.poetry.dependencies]
pyjwt = "^2.10.1"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
pydantic-settings = "^2.8.1"
auth0-python = "^4.9.0"
sqlmodel = "^0.0.24"
sqlalchemy = "^2.0.40"
alembic = "^1.15.2"
faker = "^37.1.0"
pusher = "^3.3.3"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pre-commit = "^4.2.0"

[tool.poetry.scripts]
api = "api.main:start_local"
openapi = "scripts.openapi:generate_openapi"
